@@ -7645,6 +7645,7 @@ sub _set_variables_texi2html()
 1;
 
 __END__
+# $Id$
 # Automatically generated from maintain/template.pod
 
 =head1 NAME
@@ -7657,6 +7658,9 @@ Texinfo::Convert::HTML - Convert Texinfo tree to HTML
     = Texinfo::Convert::HTML->converter({'parser' => $parser});
 
   $converter->output($tree);
+  $converter->convert($tree);
+  $converter->convert_tree($tree);
+  $converter->output_internal_links(); # HTML only
 
 =head1 DESCRIPTION
 
@@ -7668,7 +7672,7 @@ Texinfo::Convert::HTML converts a Texinfo tree to HTML.
 
 =item $converter = Texinfo::Convert::HTML->converter($options)
 
-Initialize an HTML converter.  
+Initialize converter from Texinfo to HTML.  
 
 The I<$options> hash reference holds options for the converter.  In
 this option hash reference a parser object may be associated with the 
@@ -7691,14 +7695,14 @@ the resulting output.
 =item $result = $converter->convert_tree($tree)
 
 Convert a Texinfo tree portion I<$tree> and return the resulting 
-output.  This function do not try to output a full document but only
-portions of document.  For a full document use C<convert>.
+output.  This function does not try to output a full document but only
+portions.  For a full document use C<convert>.
 
 =item $result = $converter->output_internal_links()
 
-Returns text representing the links in the document.  At present the format 
-should follow the C<--internal-links> option of texi2any/makeinfo specification
-and this is only relevant for HTML.
+Returns text representing the links in the document.  The format should
+follow the C<--internal-links> option of the texi2any/makeinfo
+specification.  This is only supported in (and relevant for) HTML.
 
 =back
 
@@ -7708,7 +7712,7 @@ Patrice Dumas, E<lt>pertusus@free.frE<gt>
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright 2012, 2013, 2014, 2015 Free Software Foundation, Inc.
+Copyright 2015 Free Software Foundation, Inc.
 
 This library is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
